objects/PDG_Public_Group_Names__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains the names of the public groups for PDG Lead routing</description>
    <label>PDG Public Group Names</label>
    <fields>
        <fullName>PDG_HOT_APAC__c</fullName>
        <description>PDG HOT APAC public group</description>
        <label>PDG HOT APAC</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDG_HOT_EMEA__c</fullName>
        <description>PDG HOT EMEA public group</description>
        <label>PDG HOT EMEA</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDG_GROW_LDRs__c</fullName>
        <description>PDG GROW LDRs public group</description>
        <label>PDG GROW LDRs</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDG_LDR_To_Dx__c</fullName>
        <description>PDG LDR To Dx public group</description>
        <label>PDG LDR To Dx</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDG_WARM_APAC__c</fullName>
        <description>PDG WARM APAC public group</description>
        <label>PDG WARM APAC</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDG_WARM_EMEA__c</fullName>
        <description>PDG WARM EMEA public group</description>
        <label>PDG WARM EMEA</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDG_HOT_Americas__c</fullName>
        <description>PDG HOT Americas public group</description>
        <label>PDG HOT Americas</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDG_WARM_Americas__c</fullName>
        <description>PDG WARM Americas public group name</description>
        <label>PDG WARM Americas</label>
        <length>225</length>
        <type>Text</type>
    </fields>
</CustomObject>